--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -8,8 +8,8 @@
 }
 .header{
     height: 7rem;
-    background: #fff;
-    border-bottom: var(--color-Grey-light-2);
+    background-color: #fff;
+    border-bottom: 2px solid var(--color-grey-light-2);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -20,7 +20,7 @@
 
 }
 .sidebar{
-     background-color: var( --color-grey--dark-1);
+     background-color: var(--color-grey--dark-1);
      flex: 0 0 18%;
      display: flex;
      flex-direction: column;
@@ -28,7 +28,6 @@
 
 }
 .hotel-view{
-    background-color: orangered;
     flex: 1;
     //test
     height: 80rem;
