--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,9 @@ Grey dark 3: #999
   --color-grey--dark-1: #333;
   --color-grey--dark-2: #777;
   --color-grey--dark-3: #999 ;
-  --shadow-dark: 0 2rem 6rem rgba(0,0,0,.3); }
+  --line:2px solid var(--color-grey-light-3);
+  --shadow-dark: 0 2rem 6rem rgba(0,0,0,.3);
+  --shadow-light:0 2rem 5rem rgba(0,0,0,.06); }
 
 * {
   margin: 0;
@@ -181,7 +183,7 @@ body {
 
 .overview {
   display: flex;
-  border-bottom: 2px solid var(--color-grey-light-3);
+  border-bottom: var(--line);
   align-items: center; }
   .overview__heading {
     font-size: 2.25rem;
@@ -247,6 +249,48 @@ body {
     transform: scale(1);
     box-shadow: none; } }
 
+.paragraph:not(:last-of-type) {
+  margin-bottom: 2rem; }
+
+.list {
+  list-style: none;
+  margin: 3rem 0;
+  padding: 3rem 0;
+  border-top: var(--line);
+  border-bottom: var(--line);
+  display: flex;
+  flex-wrap: wrap; }
+  .list__item {
+    flex: 0 0 50%;
+    margin-bottom: .7rem; }
+  .list__item::before {
+    content: "";
+    display: inline-block;
+    height: 1rem;
+    width: 1rem;
+    margin-right: .7rem;
+    background-color: var(--color-primary);
+    -webkit-mask-image: url("../img/chevron-thin-right.svg");
+    -webkit-mask-size: cover;
+    mask-image: url("../img/chevron-thin-right.svg");
+    mask-size: cover; }
+
+.reccomend {
+  font-size: 1.3rem;
+  color: var(--color-grey--dark-3);
+  display: flex;
+  align-items: center; }
+  .reccomend__count {
+    margin-right: auto; }
+  .reccomend__photo {
+    box-sizing: content-box;
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+    border: 3px solid #fff; }
+    .reccomend__photo:not(:last-child) {
+      margin-right: -1.5rem; }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
@@ -257,7 +301,7 @@ body {
 .header {
   height: 7rem;
   background-color: #fff;
-  border-bottom: 2px solid var(--color-grey-light-2);
+  border-bottom: var(--line);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -274,5 +318,22 @@ body {
   justify-content: space-between; }
 
 .hotel-view {
-  flex: 1;
-  height: 80rem; }
+  flex: 1; }
+
+.detail {
+  display: flex;
+  padding: 4.5rem;
+  background-color: var(--color-grey-light-1);
+  border-bottom: var(--line); }
+
+.description {
+  font-size: 1.4rem;
+  background-color: #fff;
+  padding: 3rem;
+  box-shadow: var(--shadow-light);
+  flex: 0 0  60%;
+  margin-right: 4.5rem; }
+
+.user-reviews {
+  background-color: yellowgreen;
+  flex: 1; }
