--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -175,7 +175,7 @@
 /////overview//////////////
 .overview{
     display: flex;
-    border-bottom: 2px solid var(--color-grey-light-3);
+    border-bottom: var(--line);
     align-items: center;
 
     &__heading{
@@ -257,4 +257,70 @@
         transform:scale(1);
         box-shadow:none;
     }
+}
+
+//////////paragraph///////////////
+.paragraph:not(:last-of-type){
+    margin-bottom:2rem ;
+}
+
+//////////list///////////////
+.list{
+    list-style: none;
+    margin: 3rem 0;
+    padding: 3rem 0;
+    border-top: var(--line);
+    border-bottom: var(--line);
+
+    display: flex;
+    flex-wrap: wrap;
+
+    &__item{
+        flex: 0 0 50%;
+        margin-bottom: .7rem;
+    }
+
+    &__item::before{
+        content: "";
+        display: inline-block;
+        height: 1rem;
+        width: 1rem;
+        margin-right: .7rem;
+        //older browser
+        // background-image: url('../img/chevron-thin-right.svg');
+        // background-size: cover;
+
+        // new browser mask
+        background-color: var(--color-primary);
+        -webkit-mask-image:url('../img/chevron-thin-right.svg');
+        -webkit-mask-size:cover;
+        mask-image:url('../img/chevron-thin-right.svg');
+        mask-size:cover;
+
+    }
+}
+
+//////////reccomend///////////////
+.reccomend{
+    font-size: 1.3rem;
+    color: var(--color-grey--dark-3);
+
+    display: flex;
+    align-items: center;
+
+    &__count{
+     margin-right: auto;
+    }
+
+    &__photo{
+        box-sizing: content-box;
+        height: 4rem;
+        width: 4rem;
+        border-radius: 50%;
+        border: 3px solid #fff;
+        &:not(:last-child){
+            margin-right: -1.5rem;
+        }
+    }
+   
 }
