--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -9,7 +9,7 @@
 .header{
     height: 7rem;
     background-color: #fff;
-    border-bottom: 2px solid var(--color-grey-light-2);
+    border-bottom: var(--line);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -29,6 +29,23 @@
 }
 .hotel-view{
     flex: 1;
-    //test
-    height: 80rem;
+}
+
+.detail{
+   display: flex;
+   padding: 4.5rem;
+   background-color: var(--color-grey-light-1);
+   border-bottom: var(--line);
+}
+.description{
+    font-size: 1.4rem;
+  background-color: #fff;
+  padding: 3rem;
+  box-shadow: var(--shadow-light);
+  flex: 0 0  60%;
+  margin-right: 4.5rem;
+}
+.user-reviews{
+   background-color: yellowgreen;
+   flex: 1;
 }
