--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -28,17 +28,20 @@
 
 }
 .hotel-view{
+    color: var(--color-grey--dark-1);
     flex: 1;
 }
 
 .detail{
+   color: var(--color-grey--dark-1);
+   font-size: 1.4rem;
    display: flex;
    padding: 4.5rem;
    background-color: var(--color-grey-light-1);
    border-bottom: var(--line);
 }
 .description{
-    font-size: 1.4rem;
+  color: var(--color-grey--dark-1);
   background-color: #fff;
   padding: 3rem;
   box-shadow: var(--shadow-light);
@@ -46,6 +49,9 @@
   margin-right: 4.5rem;
 }
 .user-reviews{
-   background-color: yellowgreen;
    flex: 1;
+   color: var(--color-grey--dark-1);
+   display: flex;
+   flex-direction: column;
+   align-items: center;
 }
