--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -5,6 +5,12 @@
     box-shadow: var(--shadow-dark);
     min-height:50rem ;
 
+    @media only screen and (max-width:$bp-largest){
+        margin: 0;
+        max-width: 100%;
+        width: 100%;
+    }
+
 }
 .header{
     height: 7rem;
@@ -17,7 +23,10 @@
 }
 .content{
    display: flex;
-
+   
+   @media only screen and (max-width: $bp-medium){
+      flex-direction: column;
+   } 
 }
 .sidebar{
      background-color: var(--color-grey--dark-1);
