--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -31,6 +31,9 @@ Grey dark 3: #999
     --shadow-dark: 0 2rem 6rem rgba(0,0,0,.3);
     --shadow-light:0 2rem 5rem rgba(0,0,0,.06);
 }
+$bp-largest:75em; //1200px
+$bp-large:68.75em; //1100px
+$bp-medium:56.25em; //900 px
 *{
     margin: 0;
     padding: 0;
@@ -44,6 +47,10 @@ Grey dark 3: #999
 html{
     box-sizing: border-box;
     font-size: 62.5%;
+
+    @media only screen and (max-width:$bp-large){
+        font-size: 50%;
+    }
 }
 body{
     font-family: 'Open Sans', sans-serif;
