--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -34,6 +34,8 @@ Grey dark 3: #999
 $bp-largest:75em; //1200px
 $bp-large:68.75em; //1100px
 $bp-medium:56.25em; //900 px
+$bp-small:37.5em; //600 px
+$bp-smallest: 31.25em;
 *{
     margin: 0;
     padding: 0;
