--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -11,6 +11,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    @media only screen and (max-width: $bp-smallest){
+        order: 1;
+        flex: 0 0 100%;
+        background-color: var(--color-grey-light-2);
+    }
     &__input {
         font-family: inherit;
         font-size: inherit;
@@ -22,6 +28,8 @@
         width: 90%;
         transition: all 0.2s;
         margin-right: -3.5rem;
+
+        
 
         &:focus {
             outline: none;
@@ -165,6 +173,10 @@
             justify-content: center;
             padding: 2rem;
         }
+        @media only screen and (max-width: $bp-small){
+           flex-direction: column;
+           padding: 1.5rem .5rem;
+          }
     }
     
     &__icon {
@@ -172,6 +184,13 @@
         height: 1.75rem;
         margin-right: 2rem;
         fill:currentColor;
+
+        @media only screen and (max-width: $bp-small){
+            margin-right: 0;
+            margin-bottom: .7rem;
+            width: 1.5rem;
+            height: 1.5rem;
+          }
     }
 }
 /////////legal text///////////
@@ -206,6 +225,11 @@
        text-transform: uppercase;
        letter-spacing: 1px;
        padding: 1.5rem 3rem;
+
+       @media only screen and (max-width: $bp-small){
+       font-size: 1.8rem;
+       padding: 1.25rem 2rem;
+      }
     }
     &__stars{
         margin-right:auto;
@@ -235,15 +259,27 @@
       align-items: center;
       justify-content: center;
       flex-direction: column;
+
+      @media only screen and (max-width: $bp-small){
+        padding: 0 1.5rem;
+      }
     }
     &__rating-avarage{
       font-size: 2.25rem;
       font-weight: 300;
       margin-bottom: -3px;
+
+      @media only screen and (max-width: $bp-small){
+        font-size: 1.8rem;
+      }
     }
     &__rating-count{
      font-size: .8rem;
      text-transform: uppercase;
+
+     @media only screen and (max-width: $bp-small){
+        font-size: .8rem;
+      }
     }
 }
 //////////btn inline///////////////
@@ -318,16 +354,18 @@
         width: 1rem;
         margin-right: .7rem;
         //older browser
-        // background-image: url('../img/chevron-thin-right.svg');
-        // background-size: cover;
-
+         background-image: url('../img/chevron-thin-right.svg');
+        background-size: cover;
+ 
         // new browser mask
+        @supports (-webkit-mask-image: url()) or (mask-image: url()){
         background-color: var(--color-primary);
         -webkit-mask-image:url('../img/chevron-thin-right.svg');
         -webkit-mask-size:cover;
         mask-image:url('../img/chevron-thin-right.svg');
         mask-size:cover;
-
+        background-image: none;
+        }
     }
 }
 
@@ -341,6 +379,9 @@
 
     &__count{
      margin-right: auto;
+    }
+    &__friends{
+        display: flex;
     }
 
     &__photo{
@@ -363,6 +404,11 @@
     margin-bottom: 3.5rem;
     position: relative;
     overflow: hidden;
+
+    @media only screen and (max-width: $bp-medium){
+        padding: 2rem;
+        margin-bottom: 3rem;
+    }
 
     &__text{
       margin-bottom: 2rem;
@@ -414,6 +460,10 @@
 .cta{
     padding: 3.5rem;
     text-align: center;
+
+    @media only screen and (max-width: $bp-medium){
+      padding: 2.5rem 0;
+    }
 
     &__book-now{
         font-size: 2rem;
