--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -17,9 +17,16 @@
     background-color: #fff;
     border-bottom: var(--line);
     display: flex;
+   
     justify-content: space-between;
     align-items: center;
     font-size: 1.4rem;
+
+     @media only screen and (max-width: $bp-smallest){
+      flex-wrap: wrap;
+      align-content: space-around;
+      height: 11rem;
+   } 
 }
 .content{
    display: flex;
@@ -48,6 +55,15 @@
    padding: 4.5rem;
    background-color: var(--color-grey-light-1);
    border-bottom: var(--line);
+   
+   @media only screen and (max-width: $bp-medium){
+    padding: 3rem;
+    
+}
+@media only screen and (max-width: $bp-small){
+  flex-direction: column;
+}
+
 }
 .description{
   color: var(--color-grey--dark-1);
@@ -56,6 +72,15 @@
   box-shadow: var(--shadow-light);
   flex: 0 0  60%;
   margin-right: 4.5rem;
+
+  @media only screen and (max-width: $bp-medium){
+    padding: 2rem;
+    margin-right: 3rem;
+}
+@media only screen and (max-width: $bp-small){
+    margin-right: 0;
+    margin-bottom: 3rem;
+  }
 }
 .user-reviews{
    flex: 1;
